--- a/Cadastro_users_v2.0.csproj
+++ b/Cadastro_users_v2.0.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDados.cs" />
     <Compile Include="CadastroCliente.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
